[gd_scene load_steps=6 format=3 uid="uid://dbuo1ffce6xcr"]

[ext_resource type="Script" path="res://Games/Supaplex/Elements/Player/player.gd" id="1_dgcj1"]
[ext_resource type="Texture2D" uid="uid://3c347qphu8kg" path="res://Games/Supaplex/Elements/Player/tmp_player_animationless.png" id="1_lknmv"]
[ext_resource type="PackedScene" uid="uid://du2f0bowkjdvr" path="res://Games/Supaplex/Elements/tile_sprite.tscn" id="2_jq7wh"]
[ext_resource type="PackedScene" uid="uid://3jbv6fsvf4lj" path="res://Games/Supaplex/Elements/tile_collision.tscn" id="3_1aybp"]
[ext_resource type="PackedScene" uid="uid://caqbelolne23g" path="res://Games/Supaplex/Elements/move_dir_ray_cast.tscn" id="3_esdch"]

[node name="Player" type="CharacterBody2D" groups=["exploadable", "explosive"]]
z_index = 1
collision_layer = 3
collision_mask = 0
script = ExtResource("1_dgcj1")

[node name="TileSprite" parent="." instance=ExtResource("2_jq7wh")]
texture = ExtResource("1_lknmv")

[node name="TileCollision" parent="." instance=ExtResource("3_1aybp")]

[node name="Camera2d" type="Camera2D" parent="."]
current = true

[node name="MoveDirRayCast" parent="." instance=ExtResource("3_esdch")]
collision_mask = 2

[node name="FallingObjectsRayCastUp" type="RayCast2D" parent="."]
target_position = Vector2(64, -48)

[node name="FallingObjectsRayCastDown" type="RayCast2D" parent="."]
target_position = Vector2(64, 48)
